--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         #chat-window { display: none; position: fixed; bottom: 20px; right: 20px; width: 320px; background: white; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); z-index: 3000; flex-direction: column; overflow: hidden; }
         #chat-header { background: var(--rose-gold); color: white; padding: 15px; font-weight: bold; display: flex; justify-content: space-between; }
         #chat-messages { height: 250px; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 8px; background: #fff9fa; }
-        .msg { padding: 8px 12px; border-radius: 15px; max-width: 80% ; font-size: 0.9rem; }
+        .msg { padding: 8px 12px; border-radius: 15px; max-width: 80% ; font-size: 0.9rem; white-space: pre-wrap; }
         .msg.admin { background: var(--rose-gold); color: white; align-self: flex-start; border-bottom-left-radius: 2px; }
         .msg.user { background: #eee; color: #333; align-self: flex-end; border-bottom-right-radius: 2px; }
     </style>
@@ -118,7 +118,6 @@
     let userIP = ""; 
 
     window.onload = async function() {
-        // 1. Lock identity via IP
         try {
             const response = await fetch('https://api.ipify.org?format=json');
             const data = await response.json();
@@ -130,14 +129,12 @@
             loadOrderHistory(userIP);
         }
 
-        // 2. Recovery: Check if they were already in a chat before refresh
         const savedChatId = localStorage.getItem('active_chat_id');
         const savedChatName = localStorage.getItem('active_chat_name');
         if(savedChatId && savedChatName) {
             openChat(savedChatId, savedChatName);
         }
 
-        // Background Animation
         const bg = document.getElementById('cake-bg');
         const icons = ['🍰', '🎂', '✨', '🧁'];
         for(let i=0; i<15; i++) {
@@ -167,29 +164,31 @@
         if(userIP) loadOrderHistory(userIP); 
     }
 
-   async function submitOrder() {
-    const n = document.getElementById('name').value; 
-    const ph = document.getElementById('phone').value; 
-    const ad = document.getElementById('address').value;
-    if(!n || !ph || !ad) return alert("All fields required!");
-    
-    try {
-        const docRef = await db.collection("orders").add({ 
-            name: n, phone: ph, address: ad, item: selItem, price: selPrice, 
-            customerIP: userIP,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp() 
-        });
-]
-        await db.collection("orders").doc(docRef.id).collection("chats").add({ 
-            text: `Baker: Received order for ${selItem}! 🌙 \n\nPlease read this: Your number is shown in our order list, so we will directly message you on WhatsApp within 2 to 3 hours. \n\nYou won't have payment options here; we will send you our UPI QR Code via WhatsApp to confirm the booking. You can close this window now!`, 
-            sender: "Admin", 
-            timestamp: firebase.firestore.FieldValue.serverTimestamp() 
-        });
+    async function submitOrder() {
+        const n = document.getElementById('name').value; 
+        const ph = document.getElementById('phone').value; 
+        const ad = document.getElementById('address').value;
+        if(!n || !ph || !ad) return alert("All fields required!");
+        
+        try {
+            const docRef = await db.collection("orders").add({ 
+                name: n, phone: ph, address: ad, item: selItem, price: selPrice, 
+                customerIP: userIP,
+                timestamp: firebase.firestore.FieldValue.serverTimestamp() 
+            });
 
-        closeModal(); 
-        openChat(docRef.id, selItem);
-    } catch(e) { alert("Error saving order!"); }
-}
+            // FEATURE UPDATE: Automated instructions message
+            await db.collection("orders").doc(docRef.id).collection("chats").add({ 
+                text: `Baker: Received order for ${selItem}! 🌙 \n\nPlease read this then you can close: Your number is shown in our order list, so we will directly message you on WhatsApp within 2 to 3 hours. \n\nYou won't have payment options here; we will send you our UPI QR Code via WhatsApp to confirm your order.`, 
+                sender: "Admin", 
+                timestamp: firebase.firestore.FieldValue.serverTimestamp() 
+            });
+
+            closeModal(); 
+            openChat(docRef.id, selItem);
+        } catch(e) { alert("Error saving order!"); }
+    }
+
     function loadOrderHistory(ip) {
         db.collection("orders").where("customerIP", "==", ip).orderBy("timestamp", "desc").onSnapshot(snap => {
             const container = document.getElementById('my-orders-container');
@@ -208,7 +207,6 @@
 
     function openChat(id, itemName) {
         activeOrderId = id; 
-        // Save to memory so it survives refresh
         localStorage.setItem('active_chat_id', id);
         localStorage.setItem('active_chat_name', itemName);
 
@@ -243,4 +241,3 @@
 </script>
 </body>
 </html>
-
